fix alignment issues

--- a/src/App.scss
+++ b/src/App.scss
@@ -49,9 +49,3 @@ input {
   @apply py-2 px-5 rounded-full shadow-lg bg-gray-50 bg-opacity-40;
   @apply border-emerald-700 border-opacity-50 border-2 focus:border-opacity-100;
 }
-
-// others
-
-#assignments {
-  margin: 1em;
-}
